--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -50,7 +50,7 @@ jobs:
 
   Build:
     needs: Smart_CI
-    if: fromJSON(needs.Smart_CI.outputs.affected_components).CI != 'all'
+    if: "!fromJSON(needs.Smart_CI.outputs.affected_components).CI"
     defaults:
       run:
         shell: bash
