--- a/samples/js/node/package.json
+++ b/samples/js/node/package.json
@@ -7,6 +7,7 @@
     "canvas": "^2.11.2",
     "eslint": "^8.39.0",
     "opencv.js": "^1.2.1",
+    "https-proxy-agent": "^7.0.2",
     "openvinojs-node": "file:../../../src/bindings/js/node/"
   },
   "scripts": {
