--- a/src/bindings/js/node/package.json
+++ b/src/bindings/js/node/package.json
@@ -21,7 +21,8 @@
     "typescript": "^5.0.4",
     "decompress": "^4.2.1",
     "node-fetch": "^3.3.2",
-    "node-addon-api": "^3.0.0"
+    "node-addon-api": "^3.0.0",
+    "https-proxy-agent": "^7.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
