--- a/.github/workflows/cleanup_cache.yml
+++ b/.github/workflows/cleanup_cache.yml
@@ -38,14 +38,14 @@ jobs:
           BRANCH="master"
           echo "Fetching list of cache key for ${BRANCH}"
           cacheKeysForPR=$(gh actions-cache list -R $REPO -B $BRANCH -L 100 | cut -f 1 )
-
+          echo "${cacheKeysForPR[*]}"
           ## Setting this to not fail the workflow while deleting cache keys.
           set +e
-          echo "Deleting caches..."
-          for cacheKey in "${cacheKeysForPR[@]::${#cacheKeysForPR[@]}-1}"
-          do
-              gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
-          done
+          # echo "Deleting caches..."
+          # for cacheKey in "${cacheKeysForPR[@]::${#cacheKeysForPR[@]}-1}"
+          # do
+          #     gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
+          # done
           echo "Done"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
