--- a/.github/workflows/cleanup_cache.yml
+++ b/.github/workflows/cleanup_cache.yml
@@ -42,7 +42,7 @@ jobs:
           ## Setting this to not fail the workflow while deleting cache keys.
           set +e
           echo "Deleting caches..."
-          for cacheKey in ${cacheKeysForPR[@]::${#cacheKeysForPR[@]}-1}
+          for cacheKey in ${cacheKeysForPR[@]:1}
           do
               # gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
               echo "${cacheKey}"
