--- a/.github/workflows/cleanup_cache.yml
+++ b/.github/workflows/cleanup_cache.yml
@@ -39,12 +39,12 @@ jobs:
           echo "Fetching list of cache key for ${BRANCH}"
           cacheKeysForPR=$(gh actions-cache list -R $REPO -B $BRANCH -L 100 | cut -f 1 )
           echo "${cacheKeysForPR[*]}"
-          cacheKeysForPRSliced=("${cacheKeysForPR[@]:1}")
+          cacheKeysForPRSliced=("${cacheKeysForPR[*]:1}")
           echo "${cacheKeysForPRSliced[*]}"
           ## Setting this to not fail the workflow while deleting cache keys.
           set +e
           echo "Deleting caches..."
-          for cacheKey in cacheKeysForPRSliced
+          for cacheKey in $cacheKeysForPRSliced
           do
               # gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
               echo "${cacheKey}"
