--- a/.github/workflows/cleanup_cache.yml
+++ b/.github/workflows/cleanup_cache.yml
@@ -38,9 +38,9 @@ jobs:
           BRANCH="master"
           echo "Fetching list of cache key for ${BRANCH}"
           cacheKeysForPR=$(gh actions-cache list -R $REPO -B $BRANCH -L 100 | cut -f 1 )
-          echo "${cacheKeysForPR[*]}"
-          cacheKeysForPRSliced=("${cacheKeysForPR[*]:1}")
-          echo "${cacheKeysForPRSliced[*]}"
+          echo "${cacheKeysForPR[@]}"
+          cacheKeysForPRSliced=("${cacheKeysForPR[@]:1}")
+          echo "${cacheKeysForPRSliced[@]}"
           ## Setting this to not fail the workflow while deleting cache keys.
           set +e
           echo "Deleting caches..."
