--- a/.github/workflows/linux_artifact_uploading.yml
+++ b/.github/workflows/linux_artifact_uploading.yml
@@ -159,7 +159,7 @@ jobs:
         run: |
           branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
           branch=$(echo "$branch" | tr / _)
-          echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+          echo "branch=$branch" >> $GITHUB_OUTPUT
         id: extract_branch
 
       - name: Upload Build Artifacts
