--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -508,7 +508,7 @@ jobs:
       image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:22.04
       volumes:
         - /mount/caches:/mount/caches
-      # options: -u 1771:1771
+      # options: -u 1001:1001
 
     env:
       OPENVINO_REPO: ${{ github.workspace }}/openvino
@@ -643,7 +643,7 @@ jobs:
             --ignore=${{ env.INSTALL_TEST_DIR }}/pyopenvino/tests/test_utils/test_utils.py \
             --ignore=${{ env.INSTALL_TEST_DIR }}/pyopenvino/tests/test_onnx/test_zoo_models.py \
             --ignore=${{ env.INSTALL_TEST_DIR }}/pyopenvino/tests/test_onnx/test_backend.py
-      
+
       - name: Python API snippets
         run: |
           source ${{ env.INSTALL_DIR }}/setupvars.sh
@@ -852,6 +852,81 @@ jobs:
             ${{ env.INSTALL_TEST_DIR }}/logs/hanged/*.log
             ${{ env.INSTALL_TEST_DIR }}/logs/interapted/*.log
             ${{ env.INSTALL_TEST_DIR }}/logs/disabled_tests.log
+          if-no-files-found: 'error'
+
+  Python_Unit_Tests (Model Optimizer UT):
+    needs: Build
+    defaults:
+      run:
+        shell: bash
+    runs-on: aks-linux-4-cores
+    container:
+      image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:22.04
+      volumes:
+        - /mount/caches:/mount/caches
+    env:
+      OPENVINO_REPO: ${{ github.workspace }}/openvino
+      INSTALL_DIR: ${{ github.workspace }}/install
+      INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
+
+      steps:
+      - name: Create Directories
+        run: |
+          mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Download OpenVINO package
+        uses: actions/download-artifact@v3
+        with:
+          name: openvino_package
+          path: ${{ env.INSTALL_DIR }}
+
+      - name: Download OpenVINO tests package
+        uses: actions/download-artifact@v3
+        with:
+          name: openvino_tests
+          path: ${{ env.INSTALL_TEST_DIR }}
+
+      - name: Extract OpenVINO packages
+        run: |
+          pushd ${{ env.INSTALL_DIR }}
+            tar -xzf openvino_package.tar.gz -C ${{ env.INSTALL_DIR }} && rm openvino_package.tar.gz || exit 1
+          popd
+
+          pushd ${{ env.INSTALL_TEST_DIR }}
+            tar -xzf openvino_tests.tar.gz -C ${{ env.INSTALL_DIR }} && rm openvino_tests.tar.gz || exit 1
+          popd
+
+      - name: Install Python wheels
+        run: |
+          python3 -m pip install openvino --find-links=${{ env.INSTALL_DIR }}/tools
+
+      - name: Install MO dependencies
+        run: |
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_mxnet.txt
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_caffe.txt
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_kaldi.txt
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_onnx.txt
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_tf2.txt
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_dev.txt
+
+      - name: Model Optimizer UT
+        run: |
+          export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:${INSTALL_TEST_DIR}:${INSTALL_DIR}/python/python3.11:$PYTHONPATH
+          source ${INSTALL_DIR}/setupvars.sh
+          python3 -m pytest -s ${INSTALL_TEST_DIR}/mo/unit_tests --junitxml=${INSTALL_TEST_DIR}/TEST-ModelOptimizer.xml
+
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v3
+        if: ${{ always() }}
+        with:
+          name: test-results-python
+          path: |
+            ${{ env.INSTALL_TEST_DIR }}/TEST*.html
+            ${{ env.INSTALL_TEST_DIR }}/TEST*.xml
           if-no-files-found: 'error'
 
   TensorFlow_Hub_Models_Tests:
