--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -868,11 +868,14 @@ jobs:
       OPENVINO_REPO: ${{ github.workspace }}/openvino
       INSTALL_DIR: ${{ github.workspace }}/install
       INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
+      TMPDIR: /tmp
 
     steps:
-      - name: Create Directories
+      - name: Test Prerequisites
         run: |
           mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
+          mkdir -p ${TMPDIR}/not_writable_dir && chattr +i ${TMPDIR}/not_writable_dir
+          mkdir -p ${TMPDIR}/another_not_writable_dir && chattr +i ${TMPDIR}/another_not_writable_dir
 
       - uses: actions/setup-python@v4
         with:
