--- a/samples/js/node/package.json
+++ b/samples/js/node/package.json
@@ -6,8 +6,8 @@
     "args": "^5.0.3",
     "canvas": "^2.11.2",
     "eslint": "^8.39.0",
-    "opencv.js": "^1.2.1",
     "https-proxy-agent": "^7.0.2",
+    "opencv-wasm": "^4.3.0-10",
     "openvinojs-node": "file:../../../src/bindings/js/node/"
   },
   "scripts": {
