--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -24,7 +24,7 @@ on:
       - master
 
 concurrency:
-  group: ${{ github.head_ref || github.run_id }}-linux
+  group: ${{ github.ref || github.run_id }}-linux
   cancel-in-progress: true
 
 jobs:
