--- a/.github/workflows/cleanup_cache.yml
+++ b/.github/workflows/cleanup_cache.yml
@@ -37,7 +37,7 @@ jobs:
 
           BRANCH="master"
           echo "Fetching list of cache key for ${BRANCH}"
-          cacheKeysForPR=$(gh actions-cache list -R $REPO -B $BRANCH -L 100 | cut -f 1 )
+          cacheKeysForPR=( $(gh actions-cache list -R $REPO -B $BRANCH -L 100 | cut -f 1) )
           echo "${cacheKeysForPR[@]}"
           cacheKeysForPRSliced=("${cacheKeysForPR[@]:1}")
           echo "${cacheKeysForPRSliced[@]}"
