--- a/.github/workflows/cleanup_cache.yml
+++ b/.github/workflows/cleanup_cache.yml
@@ -36,15 +36,16 @@ jobs:
           done
 
           BRANCH="master"
+          KEY="ccache-linux-ubuntu"
           echo "Fetching list of cache key for ${BRANCH}"
-          cacheKeysForPR=( $(gh actions-cache list -R $REPO -B $BRANCH -L 100 | cut -f 1) )
+          cacheKeysForPR=( $(gh actions-cache list -R $REPO -B $BRANCH -L 100 --key $KEY--sort created-at --order desc | cut -f 1) )
           echo "${cacheKeysForPR[@]}"
           cacheKeysForPRSliced=("${cacheKeysForPR[@]:1}")
           echo "${cacheKeysForPRSliced[@]}"
           ## Setting this to not fail the workflow while deleting cache keys.
           set +e
           echo "Deleting caches..."
-          for cacheKey in $cacheKeysForPRSliced
+          for cacheKey in ${cacheKeysForPRSliced[@]}
           do
               # gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
               echo "${cacheKey}"
