Use more correct dependents key

--- a/.github/components.yml
+++ b/.github/components.yml
@@ -1,7 +1,7 @@
 CPU:
-  dependencies:
+  dependent_components:
     - Python_API
 
 Python_API:
-  dependencies:
+  dependent_components:
     - CPU.build
