--- a/.github/workflows/cleanup_cache.yml
+++ b/.github/workflows/cleanup_cache.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Cleanup master's caches
         env:
           BRANCH: master
-          KEYS: ( "ccache-linux-ubuntu" "ccache-Build-linux-debian" "ccache-Build-linux-android" "ccache-Build-linux-arm64")
+          KEYS: "ccache-linux-ubuntu" "ccache-Build-linux-debian" "ccache-Build-linux-android" "ccache-Build-linux-arm64"
         run: |
           for KEY in ${KEYS[@]}
           do
