--- a/samples/js/node/package.json
+++ b/samples/js/node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openvinojs-nodejs-demo",
+  "name": "openvinojs-node-demo",
   "version": "1.0.0",
   "license": "Apache-2.0",
   "devDependencies": {
