--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -809,6 +809,84 @@ jobs:
             ${{ env.INSTALL_TEST_DIR }}/logs/disabled_tests.log
           if-no-files-found: 'error'
 
+  Python_Unit_Tests-Model_Optimizer_UT:
+    needs: Build
+    defaults:
+      run:
+        shell: bash
+    runs-on: aks-linux-4-cores
+    container:
+      image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:22.04
+      volumes:
+        - /mount/caches:/mount/caches
+    env:
+      OPENVINO_REPO: ${{ github.workspace }}/openvino
+      INSTALL_DIR: ${{ github.workspace }}/install
+      INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
+      TMPDIR: /tmp
+
+    steps:
+      - name: Test Prerequisites
+        run: |
+          mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
+          mkdir -p ${TMPDIR}/not_writable_dir && sudo chattr +i ${TMPDIR}/not_writable_dir
+          mkdir -p ${TMPDIR}/another_not_writable_dir && sudo chattr +i ${TMPDIR}/another_not_writable_dir
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Download OpenVINO package
+        uses: actions/download-artifact@v3
+        with:
+          name: openvino_package
+          path: ${{ env.INSTALL_DIR }}
+
+      - name: Download OpenVINO tests package
+        uses: actions/download-artifact@v3
+        with:
+          name: openvino_tests
+          path: ${{ env.INSTALL_TEST_DIR }}
+
+      - name: Extract OpenVINO packages
+        run: |
+          pushd ${{ env.INSTALL_DIR }}
+            tar -xzf openvino_package.tar.gz -C ${{ env.INSTALL_DIR }} && rm openvino_package.tar.gz || exit 1
+          popd
+
+          pushd ${{ env.INSTALL_TEST_DIR }}
+            tar -xzf openvino_tests.tar.gz -C ${{ env.INSTALL_DIR }} && rm openvino_tests.tar.gz || exit 1
+          popd
+
+      - name: Install Python wheels
+        run: |
+          python3 -m pip install openvino --find-links=${{ env.INSTALL_DIR }}/tools
+
+      - name: Install MO dependencies
+        run: |
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_mxnet.txt
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_caffe.txt
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_kaldi.txt
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_onnx.txt
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_tf2.txt
+          pip install -r ${OPENVINO_REPO}/tools/mo/requirements_dev.txt
+
+      - name: Model Optimizer UT
+        run: |
+          export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:${INSTALL_TEST_DIR}:${INSTALL_DIR}/python/python3.11:$PYTHONPATH
+          source ${INSTALL_DIR}/setupvars.sh
+          python3 -m pytest -s ${INSTALL_TEST_DIR}/mo/unit_tests --junitxml=${INSTALL_TEST_DIR}/TEST-ModelOptimizer.xml
+
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v3
+        if: ${{ always() }}
+        with:
+          name: test-results-python
+          path: |
+            ${{ env.INSTALL_TEST_DIR }}/TEST*.html
+            ${{ env.INSTALL_TEST_DIR }}/TEST*.xml
+          if-no-files-found: 'error'
+
   TensorFlow_Hub_Models_Tests:
     needs: Build
     defaults:
